--- a/lab4css.css
+++ b/lab4css.css
@@ -21,7 +21,6 @@ header{
 }
 
 main{
-   /* height: 100vh; */
    display: flex;
    justify-content: center;
    flex: 1 0 auto;
@@ -62,10 +61,6 @@ article{
     margin: 20px;
     border: 1px solid #d0d0d0;
     border-radius: 10px;
-}
-P::selection{
-    background-color:#e1e5eb;
-    color: forestgreen;
 }
 
 .post{
@@ -112,11 +107,34 @@ li{
     border-radius: 5px;
     padding: 10px;
     margin-top: 30px;
-    margin-left: 200px;
+    margin-left: 10vw;
 }
 
 .insidebox{
     background-color: #edeef0;
     color: black;
     margin-top: 20px;
+}
+
+@media screen and (max-width: 700px) {
+    P::selection{
+        background-color:#e1e5eb;
+        color: forestgreen;
+    }
+    main{
+        flex-direction: column;
+        align-items: center;
+    }
+    li{
+        display: inline-block;
+        margin: 10px;
+    }
+    nav{
+        text-align: center;
+    }
+    aside{
+        display: none;
+    }
+
+
 }
